[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySearch"
version = "0.1.0"
description = "A simple yet powerful file searching tool with GUI supported."
authors = [
    { name = "Zanax", email = "zanax10101@gmail.com" }
]

[project.scripts]
pysearch = "cli:main"